[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/FlatUI/kenneyUI-yellow.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Pixel Town - Parallax Background 1.2/PixelTown_Night.png" type="Texture" id=3]
[ext_resource path="res://Assets/Pixel Town - Parallax Background 1.2/PixelTown_Day.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pixel Town - Parallax Background 1.2/PixelTown_Sunset.png" type="Texture" id=5]
[ext_resource path="res://Assets/FlatUI/kenneyUI.tres" type="Theme" id=6]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 3
fps = 0.5
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 3 )
frame_2/delay_sec = 0.0

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 0.07
anchor_bottom = 0.08
margin_right = 952.32
margin_bottom = 552.0
texture = SubResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = -222.0
margin_right = 247.0
margin_bottom = -42.0
__meta__ = {
"_edit_group_": true
}

[node name="NewCharButton" type="Button" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 42.251
text = "New Character"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 188.0
margin_bottom = 88.251
text = "Continue"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 188.0
margin_bottom = 134.251
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 188.0
margin_bottom = 180.251
text = "Quit"

[node name="BingoCityHeader" type="Button" parent="."]
margin_left = 264.0
margin_top = 8.0
margin_right = 390.324
margin_bottom = 50.251
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 6 )
text = "BINGO CITY"

[node name="InstructionsDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -124.0
margin_right = 252.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="InstructionsDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -82.5
margin_right = 252.0
margin_bottom = 82.5
text = "Welcome to Bingo City

To move: Arrow keys
to purchase decor: walk to stand
to earn money: walk around

Thank you for playing, 
more features are on the way!"
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/NewCharButton" to="." method="_on_NewCharButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
